--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,5 @@
-JWT_SECRET = secret123
-PORT=5000
+ADMIN_SECRET_KEY = secret123
+PORT=8080
 MONGODB_URI=mongodb://127.0.0.1:27017/socialhub
+ADMIN_PASSWORD=admin
+ACCESS_TOKEN_SECRET=secret12
